I'm a freaking idiot (best commit name ever)